--- a/index.html
+++ b/index.html
@@ -847,7 +847,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6">
-                    <h1 class="hero-title">Hi, I'm <span>Fatima Azzahra</span><br>Student Software Engineering</h1>
+                    <h1 class="hero-title">Hi, I'm <span>Azzahra</span><br>Student Software Engineering</h1>
                     <p class="hero-subtitle">SMKN TENGARAN student passionate about web development. Currently learning HTML, CSS, JavaScript, Laragon, Laravel, and creating admin dashboards with Filament.</p>
                     <a href="#projects" class="btn btn-primary-custom">View My Projects</a>
                 </div>
